--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@react-three/drei": "^9.74.15",
     "@react-three/fiber": "^8.13.3",
     "framer-motion": "^10.12.16",
+    "intersection-observer": "^0.12.2",
     "maath": "^0.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
